Fix align center

--- a/src/contents/all/style.scss
+++ b/src/contents/all/style.scss
@@ -50,6 +50,7 @@ $progress-bg-color: rgb(230, 215, 215);
         right: auto !important;
         top: auto !important;
         bottom: auto !important;
+        display: block !important;
       }
     .clean-reader-show-main {
         position: absolute !important;
